--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -10,3 +10,22 @@
 .tittle {
     text-align: center;
 }
+
+table {
+    width: 80vw;
+    margin-top: 10px;
+}
+
+table, thead, tbody ,tr, th, td{
+    border: 1px solid black;
+    border-collapse: collapse;
+
+    padding: 5px;
+    text-align: center;
+}
+
+.removeList{
+    margin: 10px auto;
+    width: 20vw;
+    height: 35px;
+}
